# real

./: .pre-commit-config.yaml  geo.py  pyproject.toml  scraper.py
scraping/: yad2_feed_item.py  yad2_scraper.py
